--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="topo">
         <br><br><br>
             <div class="risca">
-                <h1><a href="../index.html">Desenvolvimento Sustentável</a></h1>
+                <h1><a href="index.html">Desenvolvimento Sustentável</a></h1>
             <hr>
         <h2 class="fonte-branca"><a href="../index.html">Carros elétricos</a></h2>
             </div>
